--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^19.2.14",
     "@angular/common": "^19.2.0",
     "@angular/compiler": "^19.2.0",
     "@angular/core": "^19.2.0",
@@ -36,8 +37,8 @@
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.2.11",
-    "@angular/cli": "^19.2.11",
+    "@angular-devkit/build-angular": "^19.2.0",
+    "@angular/cli": "^19.2.0",
     "@angular/compiler-cli": "^19.2.0",
     "@types/file-saver": "^2.0.7",
     "@types/jasmine": "~5.1.0",
@@ -57,7 +58,7 @@
     "postcss": "^8.4.49",
     "prettier": "^3.0.0",
     "source-map-explorer": "^2.5.3",
-    "tailwindcss": "^3.4.17",
-    "typescript": "~5.7.2"
+    "tailwindcss": "^3.4.4",
+    "typescript": "~5.5.0"
   }
 }
